fix: hide nav menu with overflow

--- a/public/global.css
+++ b/public/global.css
@@ -2,8 +2,9 @@
 
 body {
     font-family: "Raleway", sans-serif;
-    padding: 0 10px 80px;
+    padding: 0 10px 69px;
     margin: 0;
+    overflow: hidden;
 
     --highlight-color: #6da87a;
     --navigation-transition: 0.3s;
